# Street-Tree-Census

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
mlruns/0/: meta.yaml
mlruns/650766870516598718/: meta.yaml
models/: preprocessor.pkl  target_le.pkl
notebooks/: baseline.ipynb  pytorch_model.ipynb
street_tree_census/: __init__.py  config.py  dataset.py  features.py  plots.py  query_example.py  server.py
street_tree_census/modeling/: model.py  predict.py  train.py
